JS - use message templating instead of string concatenation

--- a/TASVideos/Pages/Forum/Edit.cshtml
+++ b/TASVideos/Pages/Forum/Edit.cshtml
@@ -55,8 +55,8 @@
 			return;
 		}
 
-		const thisO = document.getElementById('Category_Forums_' + index + '__Ordinal');
-		const nextO = document.getElementById('Category_Forums_' + (index + 1) + '__Ordinal');
+		const thisO = document.getElementById(`Category_Forums_${index}__Ordinal`);
+		const nextO = document.getElementById(`Category_Forums_${index + 1}__Ordinal`);
 
 		const thisOVal = thisO.value;
 		const nextOVal = nextO.value;
@@ -64,7 +64,7 @@
 		thisO.value = nextOVal;
 		nextO.value = thisOVal;
 
-		const nextSection = document.querySelector('.forum-section[data-index="' + (index + 1) + '"]');
+		const nextSection = document.querySelector(`.forum-section[data-index="${index + 1}"]`);
 
 		parent.dataset.index = index + 1;
 		nextSection.dataset.index = index;
@@ -79,8 +79,8 @@
 			return;
 		}
 
-		const thisO = document.getElementById('Category_Forums_' + index + '__Ordinal');
-		const prevO = document.getElementById('Category_Forums_' + (index - 1) + '__Ordinal');
+		const thisO = document.getElementById(`Category_Forums_${index}__Ordinal`);
+		const prevO = document.getElementById(`Category_Forums_${index - 1}__Ordinal`);
 
 		const thisOVal = thisO.value;
 		const prevOVal = prevO.value;
@@ -88,7 +88,7 @@
 		thisO.value = prevOVal;
 		prevO.value = thisOVal;
 
-		const prevSection = document.querySelector('.forum-section[data-index="' + (index - 1) + '"]');
+		const prevSection = document.querySelector(`.forum-section[data-index="${index - 1}"]`);
 		parent.dataset.index = index - 1;
 		prevSection.dataset.index = index;
 
@@ -106,20 +106,20 @@
 
 		for (const i in sections) {
 			const ord = sections[i].querySelectorAll('[id$="Ordinal"]')[0];
-			ord.setAttribute('id', 'Category_Forums_' + i + '__Ordinal');
-			ord.setAttribute('name', 'Category.Forums[' + i + '].Ordinal');
+			ord.setAttribute('id', `Category_Forums_${i}__Ordinal`);
+			ord.setAttribute('name', `Category.Forums[${i}].Ordinal`);
 
 			const id = sections[i].querySelectorAll('[id$="Id"]')[0];
-			id.setAttribute('id', 'Category_Forums_' + i + '__Id');
-			id.setAttribute('name', 'Category.Forums[' + i + '].Id');
+			id.setAttribute('id', `Category_Forums_${i}__Id`);
+			id.setAttribute('name', `Category.Forums[${i}].Id`);
 
 			const name = sections[i].querySelectorAll('[id$="Name"]')[0];
-			name.setAttribute('id', 'Category_Forums_' + i + '__Name');
-			name.setAttribute('name', 'Category.Forums[' + i + '].Name');
+			name.setAttribute('id', `Category_Forums_${i}__Name`);
+			name.setAttribute('name', `Category.Forums[${i}].Name`);
 
 			const description = sections[i].querySelectorAll('[id$="Description"]')[0];
-			description.setAttribute('id', 'Category_Forums_' + i + '__Description');
-			description.setAttribute('name', 'Category.Forums[' + i + '].Description');
+			description.setAttribute('id', `Category_Forums_${i}__Description`);
+			description.setAttribute('name', `Category.Forums[${i}].Description`);
 
 			container.appendChild(sections[i]);
 		}
