--- a/TASVideos/Pages/Publications/Catalog.cshtml
+++ b/TASVideos/Pages/Publications/Catalog.cshtml
@@ -81,7 +81,7 @@
 					}
 				};
 
-				xmlhttp.open("GET", "/Games/List/GameDropDownForSystem?includeEmpty=false&systemId=" + systemModel.value, true);
+				xmlhttp.open("GET", `/Games/List/GameDropDownForSystem?includeEmpty=false&systemId=${systemModel.value}`, true);
 				xmlhttp.send();
 
 				const xmlhttp2 = new XMLHttpRequest();
@@ -93,7 +93,7 @@
 					}
 				};
 
-				xmlhttp2.open("GET", "/Games/List/FrameRateDropDownForSystem?includeEmpty=false&systemId=" + systemModel.value, true);
+				xmlhttp2.open("GET", `/Games/List/FrameRateDropDownForSystem?includeEmpty=false&systemId=${systemModel.value}`, true);
 				xmlhttp2.send();
 			} else {
 				Array.from(document.querySelectorAll('#@Html.IdFor(m => m.Catalog.GameId) option'))
@@ -126,7 +126,7 @@
 					}
 				};
 
-				xmlhttp.open("GET", "/Games/List/RomDropDownForGame?includeEmpty=false&gameId=" + gameModel.value, true);
+				xmlhttp.open("GET", `/Games/List/RomDropDownForGame?includeEmpty=false&gameId=${gameModel.value}`, true);
 				xmlhttp.send();
 			} else {
 				createRomBtn.setAttribute('disabled', 'disabled');
@@ -139,12 +139,12 @@
 
 		document.getElementById('create-rom').onclick = function () {
 			const gameId = document.getElementById('@Html.IdFor(m => m.Catalog.GameId)').value;
-			document.location = '/Games/' + gameId + '/Roms/Edit?returnUrl=@HttpContext.CurrentPathToReturnUrl()';
+			document.location = `/Games/${gameId}/Roms/Edit?returnUrl=@HttpContext.CurrentPathToReturnUrl()`;
 		}
 
 		document.getElementById('create-game').onclick = function () {
 			const systemId = document.getElementById('@Html.IdFor(m => m.Catalog.SystemId)').value;
-			document.location = '/Games/Edit?returnUrl=@HttpContext.CurrentPathToReturnUrl()&systemId=' + systemId;
+			document.location = `/Games/Edit?returnUrl=@HttpContext.CurrentPathToReturnUrl()&systemId=${systemId}`;
 		}
 	}
 </script>
