--- a/TASVideos/Pages/Users/_UserSearch.cshtml
+++ b/TASVideos/Pages/Users/_UserSearch.cshtml
@@ -46,7 +46,7 @@
 					};
 
 					xmlhttp.open("GET",
-						"/Users/List/Search/?partial=" + searchVal,
+						`/Users/List/Search/?partial=${searchVal}`,
 						true);
 					xmlhttp.send();
 				} else {
