--- a/TASVideos/Pages/Users/Edit.cshtml
+++ b/TASVideos/Pages/Users/Edit.cshtml
@@ -129,7 +129,7 @@
 								};
 
 								xmlhttp.open("GET",
-									"/Users/List?handler=VerifyUniqueUserName&userName=" + userNameBox.value,
+									`/Users/List?handler=VerifyUniqueUserName&userName=${userNameBox.value}`,
 									true);
 								xmlhttp.send();
 							};
