--- a/TASVideos/Pages/Roles/AddEdit.cshtml
+++ b/TASVideos/Pages/Roles/AddEdit.cshtml
@@ -139,20 +139,6 @@
 			const permissions = Array.from(document.querySelectorAll(selector)).map(element => element.value);
 
 			if (permissions.length > 0) {
-				const xmlhttp = new XMLHttpRequest();
-				xmlhttp.onreadystatechange = function() {
-					if (xmlhttp.readyState === XMLHttpRequest.DONE) {
-						if (xmlhttp.status === 200) {
-							const data = JSON.parse(xmlhttp.responseText);
-							if (data) {
-								document.getElementById("assignable-roles").textContent = data.join(', ');
-							} else {
-								document.getElementById("assignable-roles").textContent = emptyAssignableRoles;
-							}
-						}
-					}
-				};
-
 				let getStr = '';
 				for (const i in permissions) {
 					if (permissions.hasOwnProperty(i)) {
@@ -162,8 +148,15 @@
 
 				getStr = getStr.slice(0, -1);
 				getStr = `/Roles/AddEdit/@(Model.Id)?handler=RolesThatCanBeAssignedBy&${getStr}`;
-				xmlhttp.open("GET", getStr, true);
-				xmlhttp.send();
+				window.fetch(`/Roles/AddEdit/@(Model.Id)?handler=RolesThatCanBeAssignedBy&${getStr}`)
+					.then(r => r.json())
+					.then(json => {
+						if (json) {
+							document.getElementById("assignable-roles").textContent = json.join(', ');
+						} else {
+							document.getElementById("assignable-roles").textContent = emptyAssignableRoles;
+						}
+					});
 			} else {
 				document.getElementById("assignable-roles").textContent = emptyAssignableRoles;
 			}
