--- a/TASVideos/Pages/Shared/_PreviewWindow.cshtml
+++ b/TASVideos/Pages/Shared/_PreviewWindow.cshtml
@@ -14,19 +14,13 @@
 	document.getElementById('preview-button').onclick = function () {
 		const markup = document.getElementById('@Model.ElementId').value;
 		document.getElementById('preview-container').classList.remove('d-none');
-		const xmlhttp = new XMLHttpRequest();
-		xmlhttp.onreadystatechange = function() {
-			if (xmlhttp.readyState === XMLHttpRequest.DONE) {
-				if (xmlhttp.status === 200) {
-					document.getElementById('preview-contents').innerHTML = xmlhttp.responseText;
-					Prism.highlightAll();
-				} else {
-					alert("Could not generate preview");
-				}
-			}
-		};
 
-		xmlhttp.open("POST", "@Model.PreviewPath");
-		xmlhttp.send(markup);
+		window.fetch("@Model.PreviewPath", { method: 'POST', body: markup})
+			.then(r => r.text())
+			.then(d => {
+				document.getElementById('preview-contents').innerHTML = d;
+				Prism.highlightAll();
+			})
+			.catch(e => alert("Could not generate preview"));
 	}
 </script>
