Userfile upload JS - use fetch API, make a global js function for clearing a dropdown

--- a/TASVideos/Pages/UserFiles/Upload.cshtml
+++ b/TASVideos/Pages/UserFiles/Upload.cshtml
@@ -56,27 +56,17 @@
 </form>
 
 <script>
+	const gameId = "@Html.IdFor(m => m.UserFile.GameId)";
 	let systemModel = document.getElementById('@Html.IdFor(m => m.UserFile.SystemId)');
-	let gameModel = document.getElementById('@Html.IdFor(m => m.UserFile.GameId)');
+	let gameModel = document.getElementById(gameId);
 
 	systemModel.onchange = function() {
 		if (this.value) {
-			const xmlhttp = new XMLHttpRequest();
-			xmlhttp.onreadystatechange = function() {
-				if (xmlhttp.readyState === XMLHttpRequest.DONE) {
-					if (xmlhttp.status === 200) {
-						gameModel.innerHTML = xmlhttp.responseText;
-					}
-				}
-			};
-
-			xmlhttp.open("GET", `/Games/List/GameDropDownForSystem?includeEmpty=true&systemId=${systemModel.value}`, true);
-			xmlhttp.send();
+			window.fetch(`/Games/List/GameDropDownForSystem?includeEmpty=true&systemId=${systemModel.value}`)
+				.then(r => r.text())
+				.then(d => gameModel.innerHTML = d);
 		} else {
-			Array.from(document.querySelectorAll('#@Html.IdFor(m => m.UserFile.GameId) option'))
-				.forEach(element => {
-					if (element.value) element.remove();
-				});
+			clearDropdown(gameId);
 		}
 	}
 </script>
