--- a/TASVideos/Pages/Submissions/Submit.cshtml
+++ b/TASVideos/Pages/Submissions/Submit.cshtml
@@ -118,20 +118,12 @@
 			return;
 		}
 
-		const xmlhttp = new XMLHttpRequest();
-		xmlhttp.onreadystatechange = function() {
-			if (xmlhttp.readyState === XMLHttpRequest.DONE) {
-				if (xmlhttp.status === 200) {
-					const data = JSON.parse(xmlhttp.responseText);
-					document.getElementById('@Html.IdFor(m => m.Create.Markup)').value = data.text;
-				}
-			}
-		};
-
-		xmlhttp.open("GET",
-			"/Submissions/Submit?handler=PrefillText",
-			true);
-		xmlhttp.send();
+		window.fetch("/Submissions/Submit?handler=PrefillText")
+			.then(handleFetchErrors)
+			.then(r => r.json())
+			.then(data => {
+				document.getElementById('@Html.IdFor(m => m.Create.Markup)').value = data.text;
+			});
 	};
 	document.getElementById('preview-button').addEventListener('click', function () {
 		document.getElementById('submit-btn').classList.remove('d-none');
