--- a/TASVideos/Pages/Wiki/EditHistory.cshtml
+++ b/TASVideos/Pages/Wiki/EditHistory.cshtml
@@ -52,25 +52,18 @@
 	function GetDiff(path, revision) {
 		const baseUrl = '/Wiki/Diff?handler=DiffData';
 		const ajaxUrl = baseUrl + '&path=' + path + '&fromRevision=' + (revision - 1) + '&toRevision=' + revision;
-
-		const xmlhttp = new XMLHttpRequest();
-		xmlhttp.onreadystatechange = function() {
-			if (xmlhttp.readyState === XMLHttpRequest.DONE) {
+		window.fetch(ajaxUrl)
+			.then(handleFetchErrors)
+			.then(r => r.json())
+			.then(data => {
 				document.getElementById("diff-view").classList.remove("d-none");
 				document.getElementById("diff-options").classList.remove("d-none");
-				if (xmlhttp.status === 200) {
-					const data = JSON.parse(xmlhttp.responseText);
-					document.getElementById("left-revision").value = data.leftMarkup;
-					document.getElementById("right-revision").value = data.rightMarkup;
-					fromRevision = revision - 1;
-					toRevision = revision;
-					generateDiff(parseInt(document.querySelector('[name="diff-type"]:checked').value));
-				}
-			}
-		};
-
-		xmlhttp.open("GET", ajaxUrl, true);
-		xmlhttp.send();
+				document.getElementById("left-revision").value = data.leftMarkup;
+				document.getElementById("right-revision").value = data.rightMarkup;
+				fromRevision = revision - 1;
+				toRevision = revision;
+				generateDiff(parseInt(document.querySelector('[name="diff-type"]:checked').value));
+			});
 	}
 
 	function generateDiff(viewType) {
@@ -86,8 +79,8 @@
 			baseTextLines: base,
 			newTextLines: newTxt,
 			opcodes: opcodes,
-			baseTextName: "r" + fromRevision,
-			newTextName: "r" + toRevision,
+			baseTextName: `r${fromRevision}`,
+			newTextName: `r${toRevision}`,
 			contextSize: 5,
 			viewType: viewType
 		}));
