--- a/TASVideos/Pages/Submissions/Index.cshtml
+++ b/TASVideos/Pages/Submissions/Index.cshtml
@@ -36,53 +36,10 @@
 		<column class="offset-md-2" md="5">
 			<label asp-for="Search.User" class="form-control-label"></label>
 			<input autocomplete="off" asp-for="Search.User" type="text" list="@Html.IdFor(m => m.Search.User)-autocomplete" class="form-control" />
-			<datalist id="@Html.IdFor(m => m.Search.User)-autocomplete"></datalist>
 			@*TODO: Turn into a component, this is nearly the same code as the user list search box, and could come in handy in other places*@
+			<script src="/js/user-search.js"></script>
 			<script>
-				{
-					let searchBox = document.getElementById('@Html.IdFor(m => m.Search.User)');
-					searchBox.onkeyup = function () {
-						const searchVal = searchBox.value.trim();
-						const dataListId = `@Html.IdFor(m => m.Search.User)-autocomplete-${searchVal}`;
-						if (searchVal.length > 2) {
-							const existingList = document.getElementById(dataListId);
-							if (existingList) {
-								searchBox.setAttribute('list', dataListId);
-								return;
-							}
-
-							const xmlhttp = new XMLHttpRequest();
-
-							xmlhttp.onreadystatechange = function() {
-								if (xmlhttp.readyState === XMLHttpRequest.DONE) {
-									if (xmlhttp.status === 200) {
-										const newSearchList = document.createElement('datalist');
-										newSearchList.id = dataListId;
-
-										const data = JSON.parse(xmlhttp.responseText);
-
-										for (const i in data) {
-											if (data.hasOwnProperty(i)) {
-												const option = document.createElement('option');
-												option.innerHTML = data[i];
-
-												newSearchList.appendChild(option);
-											}
-										}
-
-										document.getElementById("submission-form").appendChild(newSearchList);
-										searchBox.setAttribute('list', dataListId);
-									}
-								}
-							};
-
-							xmlhttp.open("GET",
-								`/Subs-List?partial=${searchVal}&handler=SearchAuthor`,
-								true);
-							xmlhttp.send();
-						}
-					};
-				}
+				searchUsers("@Html.IdFor(m => m.Search.User)");
 			</script>
 			<label asp-for="Search.System" class="form-control-label"></label>
 			<select asp-for="Search.System" asp-items="Model.SystemList" class="form-control"></select>
