oops, fix preview logic

--- a/TASVideos/Pages/Shared/_PreviewWindow.cshtml
+++ b/TASVideos/Pages/Shared/_PreviewWindow.cshtml
@@ -19,7 +19,10 @@
 			.then(r => {
 				if (!r.ok) {
 					alert("Could not generate preview");
+					throw Error(r.statusText);
 				}
+
+				return r;
 			})
 			.then(r => r.text())
 			.then(d => {
