--- a/TASVideos/Pages/Account/Register.cshtml
+++ b/TASVideos/Pages/Account/Register.cshtml
@@ -5,8 +5,6 @@
 	ViewData["Title"] = "Register";
 }
 
-<!-- For manual implementation of Google's ReCaptcha scripts, will require embedding site's public key. -->
-<script src="https://www.google.com/recaptcha/api.js"></script>
 
 <h2>@ViewData["Title"]</h2>
 <h4>Create a new account.</h4>
@@ -64,13 +62,16 @@
 		<button type="submit" class="btn btn-secondary">Register</button>
 	</div>
 </form>
-<script>
-	{
-		const timezoneOffset = 0 - new Date().getTimezoneOffset();
-		let timezone = document.querySelector(`[data-offset="${timezoneOffset}"]`);
-		timezone.setAttribute('selected', 'selected');
-	}
-</script>
+
 @section Scripts {
 	<partial name="_ValidationScriptsPartial" />
+	@*For manual implementation of Google's ReCaptcha scripts, will require embedding site's public key.*@
+	<script src="https://www.google.com/recaptcha/api.js"></script>
+	<script>
+		{
+			const timezoneOffset = 0 - new Date().getTimezoneOffset();
+			let timezone = document.querySelector(`[data-offset="${timezoneOffset}"]`);
+			timezone.setAttribute('selected', 'selected');
+		}
+	</script>
 }
