--- a/TASVideos/Pages/Forum/Index.cshtml
+++ b/TASVideos/Pages/Forum/Index.cshtml
@@ -29,41 +29,44 @@
 		</div>
 	}
 </div>
-<script>
-	let currentTime = Math.floor(Date.now() / 1000);
-	{
-		let visitedTopics = localStorage.getItem('VisitedTopics');
-		if (visitedTopics) {
-			visitedTopics = JSON.parse(visitedTopics);
-		} else {
-			visitedTopics = {};
-		}
-		let activitySubforums = document.getElementsByClassName('activity-subforum');
-		for (let activityTopic of activitySubforums){
-			let activityJson = JSON.parse(activityTopic.dataset.activityJson);
-			let display = false;
-			for (let topicId in activityJson){
-				let lastVisit = visitedTopics[topicId];
-				if (!lastVisit || lastVisit < activityJson[topicId]){
-					display = true;
-					break;
+
+@section Scripts {
+	<script>
+		let currentTime = Math.floor(Date.now() / 1000);
+		{
+			let visitedTopics = localStorage.getItem('VisitedTopics');
+			if (visitedTopics) {
+				visitedTopics = JSON.parse(visitedTopics);
+			} else {
+				visitedTopics = {};
+			}
+			let activitySubforums = document.getElementsByClassName('activity-subforum');
+			for (let activityTopic of activitySubforums){
+				let activityJson = JSON.parse(activityTopic.dataset.activityJson);
+				let display = false;
+				for (let topicId in activityJson){
+					let lastVisit = visitedTopics[topicId];
+					if (!lastVisit || lastVisit < activityJson[topicId]){
+						display = true;
+						break;
+					}
+				}
+				if (display){
+					activityTopic.classList.remove('d-none');
 				}
 			}
-			if (display){
-				activityTopic.classList.remove('d-none');
-			}
 		}
-	}
-	function markAllPostsRead(){
-		let visitedTopics = {};
-		let activitySubforums = document.getElementsByClassName('activity-subforum');
-		for (let activityTopic of activitySubforums){
-			let activityJson = JSON.parse(activityTopic.dataset.activityJson);
-			for (let topicId in activityJson){
-				visitedTopics[topicId] = currentTime;
+		function markAllPostsRead(){
+			let visitedTopics = {};
+			let activitySubforums = document.getElementsByClassName('activity-subforum');
+			for (let activityTopic of activitySubforums){
+				let activityJson = JSON.parse(activityTopic.dataset.activityJson);
+				for (let topicId in activityJson){
+					visitedTopics[topicId] = currentTime;
+				}
 			}
+			localStorage.setItem('VisitedTopics', JSON.stringify(visitedTopics));
+			location.reload();
 		}
-		localStorage.setItem('VisitedTopics', JSON.stringify(visitedTopics));
-		location.reload();
-	}
-</script>
+	</script>
+}
