--- a/TASVideos/Pages/Wiki/EditHistory.cshtml
+++ b/TASVideos/Pages/Wiki/EditHistory.cshtml
@@ -55,7 +55,7 @@
 		function GetDiff(path, revision) {
 			const baseUrl = '/Wiki/Diff?handler=DiffData';
 			const ajaxUrl = baseUrl + '&path=' + path + '&fromRevision=' + (revision - 1) + '&toRevision=' + revision;
-			window.fetch(ajaxUrl)
+			fetch(ajaxUrl)
 				.then(handleFetchErrors)
 				.then(r => r.json())
 				.then(data => {
