Replace colors with suggested 7:1 ones

--- a/TASVideos/wwwroot/css/partials/_colors.scss
+++ b/TASVideos/wwwroot/css/partials/_colors.scss
@@ -55,5 +55,5 @@ $module-error-color: #f8d7da;
 
 //custom diff dark mode colors
 $diff-replace-dark: #dba400;
-$diff-delete-dark: #810E1F;
-$diff-insert-dark: #0D4A2C;
+$diff-delete-dark: #AA132A;
+$diff-insert-dark: #125E38;
