--- a/TASVideos/wwwroot/css/diff.scss
+++ b/TASVideos/wwwroot/css/diff.scss
@@ -32,7 +32,16 @@
 		text-align: right;
 	}
 
-	.expand {
+	.contracter {
+		text-align: center;
+		border: 0;
+		display: none;
+	}
+
+	.expander {
+	}
+
+	button {
 		text-align: center;
 		border: 0;
 	}
@@ -44,14 +53,14 @@
 
 	&.inline {
 		grid-template-columns: auto auto 1fr;
-		.expand {
+		button {
 			grid-column: span 3;
 		}
 	}
 
 	&.sidebyside {
 		grid-template-columns: auto 1fr auto 1fr;
-		.expand {
+		button {
 			grid-column: span 4;
 		}
 	}
