implement GameGroup add/edit/delete

--- a/TASVideos/Pages/GameGroups/Index.cshtml
+++ b/TASVideos/Pages/GameGroups/Index.cshtml
@@ -8,6 +8,7 @@
 	No Games Listed for this Game Group
 </warning-alert>
 <a asp-page="List" class="mb-2">See All Groups</a>
+<a asp-page="Edit" asp-route-id="@Model.Id" class="btn btn-primary mb-3 float-end" permission="CatalogMovies"><i class="fa fa-pencil"></i> Edit</a>
 <table condition="Model.Games.Any()" class="table table-bordered table-striped">
 	<tr>
 		<th>Game</th>
