--- a/TASVideos/Pages/GameGroups/List.cshtml
+++ b/TASVideos/Pages/GameGroups/List.cshtml
@@ -4,6 +4,7 @@
 	ViewData["Title"] = "Game Groups";
 }
 
+<a class="float-end btn btn-primary" permission="CatalogMovies" asp-page="Edit"><i class="fa fa-plus"></i> Create</a>
 <ul>
 	@foreach(var group in Model.GameGroups.OrderBy(gg => gg.Name))
 	{
