--- a/TASVideos/Pages/Shared/_Layout.cshtml
+++ b/TASVideos/Pages/Shared/_Layout.cshtml
@@ -127,7 +127,13 @@
 			integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
 			crossorigin="anonymous"></script>
 	<script src="~/js/site.js"></script>
-	<script src="~/js/prism.js"></script>
+	<script>
+		if (document.querySelector('code[class*="language-"], [class*="language-"] code, code[class*="lang-"], [class*="lang-"] code') !== null){
+			let prism = document.createElement('script')
+			prism.src = '/js/prism.js'
+			document.body.appendChild(prism)
+		}
+	</script>
 	@await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
