--- a/TASVideos/Pages/Shared/_LoginPartial.cshtml
+++ b/TASVideos/Pages/Shared/_LoginPartial.cshtml
@@ -29,7 +29,12 @@
 				<button id="Logout" type="submit" class="btn btn-link navbar-btn nav-link text-nowrap fs-6 border-0"><i class="fa fa-sign-out"></i> Log out</button>
 			</nav-item>
 			<nav-item activate="Search">
-				<a id="Search" class="nav-link text-nowrap" asp-page="/Search/Index"><i class="fa fa-search"></i> Search</a>
+				<form method="GET" action="/Search/Index">
+					<div class="input-group mt-1">
+						<button type="submit"><i class="fa fa-search"></i></button>
+						<input type="text" name="SearchTerms" class="form-control" />
+					</div>
+				</form>
 			</nav-item>
 		</navbar>
 	</form>
@@ -44,7 +49,12 @@ else
 			<a id="Login" class="nav-link text-nowrap" asp-page="/Account/Login" asp-route-returnUrl="@Context.CurrentPathToReturnUrl()"><i class="fa fa-sign-in"></i> Log in</a>
 		</nav-item>
 		<nav-item activate="Search">
-			<a id="Search" class="nav-link text-nowrap" asp-page="/Search/Index"><i class="fa fa-search"></i> Search</a>
+			<form method="GET" action="/Search/Index">
+				<div class="input-group mt-1">
+					<button type="submit"><i class="fa fa-search"></i></button>
+					<input type="text" name="SearchTerms" class="form-control" />
+				</div>
+			</form>
 		</nav-item>
 	</navbar>
 }
