--- a/TASVideos/Pages/Shared/_LoginPartial.cshtml
+++ b/TASVideos/Pages/Shared/_LoginPartial.cshtml
@@ -31,7 +31,9 @@
 			<nav-item activate="Search">
 				<form method="GET" action="/Search/Index">
 					<div class="input-group mt-1">
-						<button type="submit"><i class="fa fa-search"></i></button>
+						<button type="submit" class="btn btn-sm border border-secondary nav-link">
+							<i class="fa fa-search"></i>
+						</button>
 						<input type="text" name="SearchTerms" class="form-control" />
 					</div>
 				</form>
@@ -51,7 +53,9 @@ else
 		<nav-item activate="Search">
 			<form method="GET" action="/Search/Index">
 				<div class="input-group mt-1">
-					<button type="submit"><i class="fa fa-search"></i></button>
+					<button type="submit" class="btn btn-sm border border-secondary nav-link">
+						<i class="fa fa-search"></i>
+					</button>
 					<input type="text" name="SearchTerms" class="form-control" />
 				</div>
 			</form>
