--- a/TASVideos/Pages/Diagnostics/CacheControl.cshtml
+++ b/TASVideos/Pages/Diagnostics/CacheControl.cshtml
@@ -1,9 +1,19 @@
 ﻿@page "{handler?}"
 @model CacheControlModel
+@inject ICacheService Cache;
 @{
-	ViewData["Title"] = "Cache Control";
+	ViewData["Title"] = $"Cache Control ({Cache.GetType().Name})";
 }
 
+<a asp-page="CacheSet" class="mt-2">Set a cache value</a>
+<row>
+	<column md="6">
+		<button class="btn btn-primary btn-sm mb-2" id="get-cache">Get Cached value by key</button>
+		<input type="text" class="form-control" id="get-cache-box" placeholder="key"/>
+		<textarea class="form-control mt-2" row="5" id="get-cache-valuebox" placeholder="value" readonly></textarea>
+	</column>
+</row>
+<hr />
 <row>
 	<column md="6">
 		<card>
@@ -36,3 +46,19 @@
 		</card>
 	</column>
 </row>
+
+@section Scripts {
+	<script>
+		const getCacheBtn = document.getElementById('get-cache');
+		const getCacheBox = document.getElementById('get-cache-box');
+		const cacheValueBox = document.getElementById('get-cache-valuebox');
+		getCacheBtn.onclick = function() {
+			fetch(`/Diagnostics/CacheControl?handler=CacheValue&key=${getCacheBox.value}`)
+				.then(handleFetchErrors)
+				.then(r => r.json())
+				.then(json => {
+					cacheValueBox.value = JSON.stringify(json.value);
+				});
+		}
+	</script>
+}
